--- a/buildpack.toml
+++ b/buildpack.toml
@@ -32,23 +32,50 @@ api = "0.8"
   pre-package = "scripts/build.sh"
 
 
-[[metadata.configurations]]
+[[metadata.configurations]] # Whether to deploy the configuration of the contract
   build = true
   default = "true"
   description = "enable the deploy solana contract process"
-  name = "BP_DEPLOY_SOLANA_CONTRACT"
+  name = "BP_ENABLE_DEPLOY_SOLANA_CONTRACT"
 
-[[metadata.configurations]]
+[[metadata.configurations]] # solana netwwork config
   build = true
-  default = "devnet"
+  default = "devnet" # can use devnet testnet mainnet https://solana.com/zh/docs/core/clusters
   description = "Configure the network for Solana deploy"
-  name = "BP_APTOS_SOLANA_NETWORK"
+  name = "BP_SOLANA_DEPLOY_NETWORK"
+
+[[metadata.configurations]] # Devnet endpoint
+build = true
+default = "https://api.devnet.solana.com" # can use devnet testnet mainnet
+description = "Devnet endpoint"
+name = "BP_DEVNET_ENDPOINT"
+
+[[metadata.configurations]] # Testnet endpoint
+build = true
+default = "https://api.testnet.solana.com"
+description = "Testnet endpoint"
+name = "BP_DEVNET_ENDPOINT"
+
+[[metadata.configurations]] # Mainnet endpoint
+build = true
+default = "https://api.mainnet-beta.solana.com"
+description = "Mainnet endpoint"
+name = "BP_MAINNET_ENDPOINT"
 
 [[metadata.configurations]]
+build = true
+default = "[128,186,144,92,143,34,29,153,205,218,144,239,18,7,193,182,88,33,54,191,6,163,225,222,184,206,40,34,242,169,214,96,108,208,200,224,25,141,34,214,58,107,90,237,255,243,76,144,157,85,109,184,51,247,174,33,95,83,39,137,158,207,238,178]"
+description = "wallet keypair"
+name = "BP_WALLET_KEYPAIR"
+
+
+[[metadata.configurations]] # solana-cli versionw
   build = true
   default = "1.17.17"
   description = "The Solana Cli version"
   name = "BP_SOLANA_ClI_VERSION"
+
+# if use Anchor , nedd to install rust toolchain  https://www.anchor-lang.com/docs/installation TODO
 
 [[metadata.dependencies]]
   id = "solana-cli"
